@@ -11,8 +11,11 @@ class InlineValidationView(BrowserView):
     """Validate a form and return the error message for a particular field as JSON.
     """
 
-    def __call__(self, fname, fset=None):
+    def __call__(self, fname=None, fset=None):
         res = {'errmsg': ''}
+
+        if fname is None:
+            return json.dumps(res)
 
         form = self.context
         if hasattr(aq_base(form), 'form_instance'):
